--- a/pepper/templates/teams/manage_team.html
+++ b/pepper/templates/teams/manage_team.html
@@ -9,7 +9,7 @@
 
 <div class="center col-md-4 col-md-offset-4">
 	<h2>Join A Team</h2>
-	<h3>Ask your friend for their team name</h3>
+	<h3>Ask your friend for their team name. (Case sensitive!)</h3>
 	<p>
 	<form method="POST" action="team" id="join">
 		<input type="text" placeholder="Join Team Name" name="join_tname">
