Fix email sending logic

--- a/pepper/templates/users/reset_password.html
+++ b/pepper/templates/users/reset_password.html
@@ -8,4 +8,4 @@
 	<input type="password" name="password-check" placeholder="Reenter password">
 	<button type="submit">Submit</button>
 </form>
-{% block content %}
+{% endblock %}
