--- a/pepper/templates/emails/base.html
+++ b/pepper/templates/emails/base.html
@@ -20,7 +20,7 @@
 					<table class="main" width="100%" cellpadding="0" cellspacing="0">
 						<tr>
 							<td class="alert alert-neutral">
-								<img src="https://d92c68liho4ps.cloudfront.net/static/branding/logo.svg">
+                                                          <img src="{{ url_for('static', filename='branding/logo.svg', _external=True) }}" width=183 height=50>
 							</td>
 						</tr>
 						<tr>
