--- a/pepper/templates/emails/base.html
+++ b/pepper/templates/emails/base.html
@@ -20,7 +20,7 @@
 					<table class="main" width="100%" cellpadding="0" cellspacing="0">
 						<tr>
 							<td class="alert alert-neutral">
-                                                          <img src="{{ url_for('static', filename='branding/logo.svg', _external=True) }}" width=183 height=50>
+                                                          <img src="{{ url_for('static', filename='branding/color_logo_small.png') }}" width=183 height=50>
 							</td>
 						</tr>
 						<tr>
@@ -39,9 +39,9 @@
 							</tr>
 							<tr>
 								<td class="aligncenter content-block">
-									<a href="https://facebook.com/HackTX"><img src="{{url_for('static', filename='img/social/fb.png', _external=True)}}"></a>
-									<a href="https://twitter.com/HackTX"><img src="{{url_for('static', filename='img/social/twitter.png', _external=True)}}"></a>
-									<a href="https://github.com/HackTX"><img src="{{url_for('static', filename='img/social/github.png', _external=True)}}"></a>
+									<a href="https://facebook.com/HackTX"><img src="{{url_for('static', filename='img/social/fb.png')}}"></a>
+									<a href="https://twitter.com/HackTX"><img src="{{url_for('static', filename='img/social/twitter.png')}}"></a>
+									<a href="https://github.com/HackTX"><img src="{{url_for('static', filename='img/social/github.png')}}"></a>
 								</td>
 							</tr>
 						</table>
