Change myHackTX to HackTX in confirm email template

--- a/pepper/templates/emails/confirm_account.html
+++ b/pepper/templates/emails/confirm_account.html
@@ -7,7 +7,7 @@
 </tr>
 <tr>
 	<td class="content-block">
-		To confirm your account on my{{ config.HACKATHON_NAME }}, please click <a
+		To confirm your account on {{ config.HACKATHON_NAME }}, please click <a
 			href="{{ link }}">this link</a>.
 	</td>
 </tr>
