--- a/pepper/static/scss/main.scss
+++ b/pepper/static/scss/main.scss
@@ -585,3 +585,23 @@ input[type=text].fullwidth {
       width: 100%;
   }
 }
+
+.data-table {
+    background: white;
+    padding: 10px 20px 10px 20px;
+    color: black;
+}
+
+.black-text {
+    color: black;
+}
+
+.context-menu {
+    display: none;
+    position: absolute;
+    z-index: 10;
+}
+
+.context-menu--active {
+    display: block;
+}
