--- a/pepper/templates/users/admin/send_email.html
+++ b/pepper/templates/users/admin/send_email.html
@@ -5,6 +5,9 @@
     <script src="https://cdn.datatables.net/select/1.2.3/js/dataTables.select.min.js"></script>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/select/1.2.3/css/select.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.6.2/jquery.contextMenu.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.6.2/jquery.contextMenu.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-contextmenu/2.6.2/jquery.ui.position.min.js"></script>
     <script src="{{ url_for('static', filename='js/batch-email.js') }}"></script>
 {% endblock %}
 
@@ -43,33 +46,35 @@
             <div class="control__indicator"></div>
         </label>
 
-        <h2>Users</h2>
-        <table id="user_table" class="display" cellspacing="0">
-            <thead>
-            <tr>
-                <th></th>
-                <th>ID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Status</th>
-                <th>Email</th>
-                <th>Confirmed</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for user in users %}
-                <tr>
-                    <td></td>
-                    <td id="user_id">{{ user.id }}</td>
-                    <td>{{ user.fname }}</td>
-                    <td>{{ user.lname }}</td>
-                    <td>{{ user.status }}</td>
-                    <td>{{ user.email }}</td>
-                    <td>{{ user.confirmed }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        <div class="data-table">
+          <h2 class="black-text">Users</h2>
+          <table id="user_table" class="display" cellspacing="0">
+              <thead>
+              <tr>
+                  <th></th>
+                  <th>ID</th>
+                  <th>First Name</th>
+                  <th>Last Name</th>
+                  <th>Status</th>
+                  <th>Email</th>
+                  <th>Confirmed</th>
+              </tr>
+              </thead>
+              <tbody>
+              {% for user in users %}
+                  <tr>
+                      <td></td>
+                      <td class="data-item user_id" name="user_id">{{ user.id }}</td>
+                      <td class="data-item" name="fname">{{ user.fname }}</td>
+                      <td class="data-item" name="lname">{{ user.lname }}</td>
+                      <td class="data-item" name="status">{{ user.status }}</td>
+                      <td class="data-item" name="email">{{ user.email }}</td>
+                      <td class="data-item" name="confirmed">{{ user.confirmed }}</td>
+                  </tr>
+              {% endfor %}
+              </tbody>
+          </table>
+        </div>
 
         <button type="submit" class="confirm">Submit <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
         </button>
